<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name2">StrangerToFriend</string>
    <string name="app_name">解密陌生人</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="username">昵称</string>
    <string name="email">昵称/邮箱</string>
    <string name="email_register">邮箱</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="register">立即注册</string>
    <string name="login">立即登陆</string>
    <string name="forget_password">忘记密码?</string>
    <string name="find_password">立即找回 </string>
    <string name="emailforfind">请输入注册邮箱地址</string>
    <string name="forget_password_send_email">已发送邮件</string>
    <string name="forget_password_email_error">请确认您的邮件地址</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_gender_null">请选择性别</string>
    <string name="error_register_take_gender_null">请自拍照片为头像</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="success_register_success">注册成功</string>
    <string name="dialog_error_title">错误</string>
    <string name="error_login_error">请确认网络和用户名密码后重试</string>
    <string name="itemdeleted">删除当前好友?</string>
    <string name="taptoundo">撤销</string>
    <string name="a">A</string>
    <string name="hint_search">请输入关键字</string>
    <string name="add_friend">加好友</string>
    <string name="user_name">昵称</string>
    <string name="user_number">我的账号</string>
    <string name="user_message">个人信息</string>
    <string name="user_position">位置</string>
    <string name="user_birth">出生</string>
    <string name="user_xingzuo">星座</string>
    <string name="user_home">家乡</string>
    <string name="user_inlove">恋爱</string>
    <string name="user_sign">签名</string>
    <string name="user_unfill_in">未填写</string>
    <string name="user_unconsummate">未完善</string>
    <string name="user_sign_content">我要减肥！ </string>
    <string name="user_position_content">未定位</string>
    <string name="exit_now_number">退出当前账号</string>
    <string name="user_alter"> 编 辑 资 料  </string>
    <string name="save_alter">保 存</string>
    <string name="games_radio_yes">是</string>
    <string name="games_radio_no">否</string>
    <string name="friend_position_content">0m</string>
    <string name="friend_number">Ta的账号</string>
    <string name="defalut_countdown">120</string>
    <string name="start">开始</string>
    <string name="start_app">开启应用</string>
    <string name="set">设置</string>
    <string name="number_and_safe">账号安全</string>
    <string name="number_bound">账号绑定</string>
    <string name="message_tip">消息提醒</string>
    <string name="blank_name">黑名单</string>
    <string name="clear_cache">清除缓存</string>
    <string name="help">"帮助 "</string>
    <string name="help_and_tickling">帮助与反馈</string>
    <string name="check_new">检查新版本</string>
    <string name="introduce">版本介绍</string>
    <string name="user_deal">用户协议</string>
    <string name="about_us">关于我们</string>

</resources>