<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.science.strangertofriend"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/user_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff" >

        <com.science.strangertofriend.widget.DampView
            android:id="@+id/dampview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <!-- 此处必须设置imageview的scaleType为centerCrop,当然在代码中设置也可以 -->

                    <ImageView
                        android:id="@+id/user_background_img"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/user_bg_img"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        android:src="@drawable/myself_bg" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/avatar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/default_user_img"
                            app:border_color="#FFEEEEEE"
                            app:border_width="2dp" />

                        <LinearLayout
                            android:id="@+id/linear_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/avatar"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20dp"
                                android:text="@string/username"
                                android:textColor="#fff"
                                android:textSize="22sp" />

                            <ImageView
                                android:id="@+id/girl"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@null"
                                android:src="@drawable/user_girl" />
                        </LinearLayout>

                        <com.science.strangertofriend.widget.RippleView
                            android:id="@+id/user_add_rippleView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/linear_username"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            app:rv_ripplePadding="30dp"
                            ripple:rv_type="simpleRipple"
                            ripple:rv_zoom="false" >

                            <Button
                                android:id="@+id/user_add"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/add_friend_button"
                                android:drawableLeft="@drawable/user_add"
                                android:drawablePadding="10dp"
                                android:paddingBottom="7dp"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:paddingTop="7dp"
                                android:text="@string/add_friend"
                                android:textColor="#8f8f8f"
                                android:textSize="23sp" />
                        </com.science.strangertofriend.widget.RippleView>
                    </RelativeLayout>
                </FrameLayout>

                <!-- 我的账号 -->

                <TextView
                    android:id="@+id/user_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_number"
                    android:textColor="#f698b2"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/user_name_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="#f698b2" />

                <TextView
                    android:id="@+id/user_number_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/acount"
                    android:gravity="center_vertical"
                    android:textSize="16sp" />

                <!-- 个人信息开始 -->

                <RelativeLayout
                    android:id="@+id/user_message_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp" >

                    <TextView
                        android:id="@+id/user_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/user_message"
                        android:textColor="#f698b2"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/user_message_alter_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right"
                        android:contentDescription="@null"
                        android:src="@drawable/alter" />
                </RelativeLayout>

                <View
                    android:id="@+id/user_message_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="1dp"
                    android:background="#f698b2" />

                <!-- 基本信息结束 -->


                <!-- 当前位置 -->

                <RelativeLayout
                    android:id="@+id/user_position_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/current_place"
                        android:gravity="center_vertical"
                        android:text="@string/user_position"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_position_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/user_position_content"
                        android:textColor="#686868"
                        android:textSize="18sp" />
                </RelativeLayout>

                <!-- 出生 -->

                <RelativeLayout
                    android:id="@+id/user_birth_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/birth"
                        android:gravity="center_vertical"
                        android:text="@string/user_birth"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_birth_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/user_unfill_in"
                        android:textColor="#686868"
                        android:textSize="18sp" />
                </RelativeLayout>

                <!-- 家乡 -->

                <RelativeLayout
                    android:id="@+id/user_home_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/hometown"
                        android:gravity="center_vertical"
                        android:text="@string/user_home"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_home_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/user_unfill_in"
                        android:textColor="#686868"
                        android:textSize="18sp" />
                </RelativeLayout>

                <!-- 星座 -->

                <RelativeLayout
                    android:id="@+id/user_start_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/xingzuo"
                        android:gravity="center_vertical"
                        android:text="@string/user_xingzuo"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_start_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/user_unfill_in"
                        android:textColor="#686868"
                        android:textSize="18sp" />
                </RelativeLayout>

                <!-- 签名 -->

                <RelativeLayout
                    android:id="@+id/user_sign_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/abc_btn_radio_to_on_mtrl_015"
                        android:gravity="center_vertical"
                        android:text="@string/user_sign"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_sign_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/user_sign_content"
                        android:textColor="#686868"
                        android:textSize="18sp" />
                </RelativeLayout>

                <com.science.strangertofriend.widget.RippleView
                    android:id="@+id/rippleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="40dp"
                    app:rv_ripplePadding="30dp"
                    ripple:rv_type="simpleRipple"
                    ripple:rv_zoom="false" >

                    <Button
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="45dp"
                        android:layout_marginRight="45dp"
                        android:background="@drawable/button_click"
                        android:paddingBottom="7dp"
                        android:paddingTop="7dp"
                        android:text="@string/exit_now_number"
                        android:textColor="#fff"
                        android:textSize="23sp" />
                </com.science.strangertofriend.widget.RippleView>
            </LinearLayout>
        </com.science.strangertofriend.widget.DampView>
    </RelativeLayout>

</io.codetail.widget.RevealFrameLayout>