<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/com.science.strangertofriend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/camera_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_camera"
        app:border_color="#FFEEEEEE"
        app:border_width="2dp" />

    <RelativeLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/camera_avatar"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_style"
            android:hint="@string/email"
            android:inputType="none"
            android:paddingBottom="9dp"
            android:paddingLeft="20dp"
            android:paddingTop="9dp"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#ccc"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="9dp"
            android:paddingLeft="20dp"
            android:paddingTop="9dp"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#ccc"
            android:textSize="20sp" />

        <com.science.strangertofriend.widget.RippleView
            android:id="@+id/rippleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:rv_ripplePadding="30dp"
            ripple:rv_type="simpleRipple"
            ripple:rv_zoom="false" >

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_click"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="23sp" />
        </com.science.strangertofriend.widget.RippleView>

        <LinearLayout
            android:id="@+id/forget_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rippleView"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <com.science.strangertofriend.widget.RippleView
                android:id="@+id/forget_rippleView_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ripple:rv_type="simpleRipple"
                ripple:rv_zoom="false" >

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/forget_password"
                    android:textColor="#fff"
                    android:textSize="17sp" />
            </com.science.strangertofriend.widget.RippleView>

            <com.science.strangertofriend.widget.RippleView
                android:id="@+id/login_rippleView_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ripple:rv_type="simpleRipple"
                ripple:rv_zoom="false" >

                <TextView
                    android:id="@+id/register_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="17sp" />
            </com.science.strangertofriend.widget.RippleView>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>